--- a/index.html
+++ b/index.html
@@ -4,22 +4,17 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>PL JEWWLLERY</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <script src='main.js'></script>
 </head>
 <body>
     <section id="Header">
-        <div1>
-          <a href="#"><img src="logo.png" class="logo" alt=""></a>
-        </div1> 
-  
-        <div2 >
-          <img src="headerimage2.png"></img>
-        </div2>
+    
+        <div1 style="width:50%; display:inline-table;"> <a href="#"><img src="logo.png" class="logo" alt=""></a> </div1> 
 
-        <div3>
+        <div3 style="width:20%; display:inline-table; height: auto;">
         <ul id="navbar">
           <li><a class="active" href="index.html">Home</a></li>
           <li><a href="shop.html">Shop</a></li>
@@ -47,7 +42,7 @@
                     document.getElementById("mySidenav").style.width = "0";
                 }
               </script>
-              <link rel="stylesheet" href="Button.css">
+            <link rel="stylesheet" href="Button.css">
           </li>
         </ul>
         </div3>
